--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,26 @@
 body{
     font-family: "Inter", sans-serif;
-    display: inline-flex;
-    margin: 8px;
-    padding: 12.6875rem;
-    justify-content: flex-end;
+    display: flex;
+    /* padding: 12.6875rem; */
+    justify-content: center;
     align-items: center;
  }
+
 .vertical-nav ul {
   list-style: none;
   padding: 0;
 }
-
+p{
+  font-weight: 300;
+}
 .vertical-nav li {
   height: 2.125rem;
 flex-shrink: 0;
 align-self: stretch;
 }
-
+.vertical-nav a:hover{
+  color:#009D60
+}
 .vertical-nav a {
   text-decoration: none;
   color: black;
@@ -28,15 +32,22 @@ align-items: flex-start;
 align-self: stretch;
 }
 #navbar{
-   display: flex;
+   /* display: flex;
     width: 15.0625rem;
     flex-direction: column;
     align-items: flex-start;
-    gap: auto;
+    gap: auto; */
+     position:fixed;
+    top:45%;
+    left:200px;
+    -webkit-transform:translateY(-50%);
+    transform:translateY(-50%);
+    width:210px;
 }
 .profile{
     text-align: left;
     color: #009D60;
+    margin: 0;
     font-size: 2rem;
     font-style: normal;
     font-weight: 300;
@@ -44,20 +55,24 @@ align-self: stretch;
 }
 
 .headshot{
-    height: 19.25rem;
+    height: 16.25rem;
     align-self: stretch;
     border: 1px solid #757575;
 }
-#main-blurb{
-    display: flex;
-/* width: 56.75rem;
-height: 16.875rem; */
-flex-direction: column;
-justify-content: space-between;
-align-items: flex-start;
+.card{
+padding: 6rem;
+ /* min-height:85vh; */
+    position:absolute;
+    top: 15vh;
+    left:400px;
+    right:0;
+    min-width:600px;
 }
-#main-header{
-    display: flex;
-align-items: flex-start;
-gap: 64px;
+a {
+  color: black;
+  text-decoration: none;
+  font-weight: 300;
+}
+a:hover{
+  color: #009D60;
 }
