--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
     justify-content: center;
     align-items: center;
  }
-
+/* Nav Bar */
 .vertical-nav ul {
   list-style: none;
   padding: 0;
@@ -62,6 +62,7 @@ align-self: stretch;
 .card{
 padding: 6rem;
  /* min-height:85vh; */
+ 
     position:absolute;
     top: 15vh;
     left:400px;
@@ -75,4 +76,45 @@ a {
 }
 a:hover{
   color: #009D60;
+}
+/* Post Styles */
+.post-img{
+  width: 16.25rem;
+height: 100%;
+border: 1px solid #757575;
+}
+.posts{
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+align-items: flex-start;
+flex-shrink: 0;
+}
+.post-tile{
+display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-bottom: 1.5rem;;
+}
+.post-blurb{
+  display: flex;
+  padding-left: 1.5rem;
+width: 29.125rem;
+height: 10.8125rem;
+flex-direction: column;
+justify-content: space-between;
+align-items: flex-start;
+}
+.back-link{
+  display: flex;
+/* width: 13.375rem;
+height: 1.5625rem; */
+align-items: center;
+gap: 1rem;
+flex-shrink: 0;
+}
+.back-icon{
+  width: 1.5rem;
+height: 1.5rem;
+flex-shrink: 0;
 }
