--- a/styles.css
+++ b/styles.css
@@ -84,23 +84,11 @@ height: 100%;
 border: 1px solid #757575;
 }
 .proj-img{
-  width: 68rem;
+  position: relative;
+  width: 60rem;
   height:100%;
   border: 1px solid #757575;
 }
-/* .proj-img-tiles{
-  width: 30rem;
-  height: 100%;
-  border: 1px solid #757575;
-} */
-/* .proj-img-container{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  gap: 0.5rem;
-} */
 .posts{
 display: flex;
 flex-direction: column;
@@ -130,6 +118,7 @@ height: 1.5625rem; */
 align-items: center;
 gap: 1rem;
 flex-shrink: 0;
+color: red;
 }
 .back-icon{
   width: 1.5rem;
@@ -151,10 +140,10 @@ td {
 /* Image Carousel */
 .carousel-container {
   position: relative;
-  width: 68rem;
+  width: 60rem;
   height: 100%;
   margin: auto;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .img-carousel {
@@ -163,9 +152,10 @@ td {
 }
 
 .carousel-img {
-  width: 68rem;
+  width: 60rem;
   height: 100%;
   display: none;
+  border: 1px solid #757575;
 }
 
 .carousel-img.active {
