--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,38 @@ td {
 .carousel-btn.right {
   right: 10px;
 }
+/* Lightbox */
+.lightbox {
+  display: none; /* Hidden by default */
+  position: fixed;
+  z-index: 10000;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.9);
+}
+
+.lightbox-content {
+  margin: auto;
+  display: block;
+  max-width: 90%;
+  max-height: 80vh;
+  border: 1px solid #fff;
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 /**************Desktop View*****************/
 @media screen and (min-width: 768px) {
 
