trying to center shadowbox arrows

--- a/styles.css
+++ b/styles.css
@@ -194,8 +194,8 @@ td {
 }
 
 .carousel-img {
-  width: 100%;
-  max-width: 55rem;
+  width: 98%;
+  /* max-width: 50rem; */
   height: auto;
   display: none;
   border: 1px solid #757575;
@@ -213,18 +213,18 @@ td {
   background-color: rgba(0,0,0,0.5);
   border: none;
   color: white;
-  font-size: 2rem;
-  padding: 0 12px;
+  font-size: 1.5rem;
+  padding: 0.625rem 0.625rem 0.625rem 0.625rem;
   cursor: pointer;
   z-index: 1;
 }
 
 .carousel-btn.left {
-  left: 10px;
+  left: 0.625rem;
 }
 
 .carousel-btn.right {
-  right: 10px;
+  right: 1.625rem;
 }
 /* Lightbox */
 .lightbox {
@@ -404,6 +404,7 @@ td {
 
 .carousel-img {
   width: 100%;
+  max-width: fit-content;
   height: 100%;
   display: none;
   border: 1px solid #757575;
